fix: add npe checks for poc